# sebbacode

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  git-memory-langgraph-design.md  mise.toml  pyproject.toml
.agent/: config.yaml  doc-standards.md  memory-write-locations.md  roadmap.md
.agent/architecture/: timeout-safety.md
.agent/gcc/: main.md
.agent/memory/: _index.md  architecture.md  audit.md  critique-roadmap-delegation.md  debugging.md  explore-task-delegation.md  gate-baselines.md  git-hooks.md  loaded.md  memory-pipeline.md  patterns.md  planning-node.md  planning-nodes.md  planning.md  recursion-limit-formula.md  testing.md  tool-implementation-patterns.md  tool-patterns.md
.agent/rules/: README-audit-cli.md  config-testing.md  doc-standards.md  docs-standards.md  executable-tools.md  git-commit-validation.md  git-testing-patterns.md  implementation-todos.md  memory-extraction.md  memory-pipeline.md  mock-patch-targets.md  mock-response-objects.md  module-isolation.md  planner-tool-sequence.md  security-api-keys.md  summarization-gating.md  testing-git.md  testing-mocks.md
.agent/sessions/: 2026-03-25.md  2026-03-26.md  2026-03-27.md
architecture/: README-structure.md
scripts/: audit-readme-consistency.sh
src/sebba_code/: __init__.py  __main__.py  cli.py  config.py  constants.py  display.py  graph.py  llm.py  plan_graph.py  planning_prompts.py  prompts.py  seed.py  state.py
tests/: conftest.py  test_cheap_model_integration.py  test_cli.py  test_llm.py  test_memory.py
tests/test_helpers/: test_git_commit.py  test_markdown.py  (+2 more)
(+105 files in other folders)
